Fix scrollbar issues with vaadin table.

--- a/annis-gui/src/main/webapp/VAADIN/themes/annis/annis-base.scss
+++ b/annis-gui/src/main/webapp/VAADIN/themes/annis/annis-base.scss
@@ -657,10 +657,11 @@
     text-shadow: 0 1px 0 rgb(55,58,157);
   }
 
-  .example-queries-table table {
+  .example-queries-table table,
+  .example-queries-table .v-table-body-wrapper {
     border-collapse: collapse;
     border-spacing: 0;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 
   .example-queries-table tr.v-selected {
